Hide horizontal scrollbar. Fixes #197

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -53,7 +53,8 @@ html, body, .container {
 }
 
 #container {
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     display: flex;
     align-items: stretch;
     flex-direction: column;
